# pi_spigot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  WorkManager.cpp  WorkManager.hpp  Worker.cpp  Worker.hpp  check.sh  constants.h  digits.h  fixed128.c  fixed128.h  fractional64bit.c  fractional64bit.h  makefile  modpow.cpp  modpow.h  pi_spigot.c  pi_spigot.cpp  utility.c  utility.h
deprecated/: fixed128.c  fixed128.h
